update firebase by swimchicken

--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>544377203050-ek6rutj8uuv2gad38vsl9a6mb22egaa0.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.544377203050-ek6rutj8uuv2gad38vsl9a6mb22egaa0</string>
 	<key>API_KEY</key>
 	<string>AIzaSyDx4xOYjKNKFkB3BCTF7IC2HAOFz2C7a0k</string>
 	<key>GCM_SENDER_ID</key>
